Adding new function latex.matrix

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,6 +4,7 @@ export(add.alpha)
 export(bernoulli.process)
 export(deal.cards)
 export(draw.urn)
+export(latex.matrix)
 export(panel.cor)
 export(poisson.process)
 export(roll.dice)
